hphp/hack/test/typecheck/type_structure9.php.exp
File "type_structure9.php", line 9, characters 3-26:
  classname<C>
File "type_structure9.php", line 20, characters 3-26:
  classname<Foo\D>
File "type_structure9.php", line 12, characters 1-13:
Namespace declaration statement has to be the very first statement in the script (Parsing[1002])
